--- a/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Pages/Index.razor
+++ b/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Pages/Index.razor
@@ -39,9 +39,9 @@
         {
             IsDisabled = false;
             var uri = NavManager.ToAbsoluteUri(NavManager.Uri);
-            if (QueryHelpers.ParseQuery(uri.Query).TryGetValue("Key", out var _initialCount))
+            if (QueryHelpers.ParseQuery(uri.Query).TryGetValue("Key", out var pwd))
             {
-                if (_initialCount != "spirit")
+                if (pwd != "spirit")
                 {
                     errormessagee = "Please login";
                 }
@@ -65,7 +65,7 @@
 
     void Login()
     {
-        if (key != "spirit")
+        if (key.ToLower() != "spirit")
         {
             errormessagee = "Wrong Key";
         }
