--- a/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Shared/NavMenu.razor
+++ b/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="christmasfront">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Christmas
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Christmas 🎄
             </NavLink>
         </li>
         <li class="nav-item px-3">
