--- a/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Shared/NavMenu.razor
+++ b/Code/Thanos.Sentinel/UI/Thanos.Sentinel.UI/Thanos.Sentinel.UI/Shared/NavMenu.razor
@@ -20,7 +20,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="christmasfront">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Christmas 🎄
+                <span class="oi oi-list-rich" aria-hidden="true"></span> 🎄 Front Garden
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="christmasback">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> 🎄 Backyard
             </NavLink>
         </li>
         <li class="nav-item px-3">
